--- a/my-app/package.json
+++ b/my-app/package.json
@@ -116,6 +116,7 @@
   "devDependencies": {
     "@babel/plugin-transform-runtime": "^7.1.0",
     "babel-plugin-import": "^1.10.0",
-    "react-app-rewired": "^1.6.2"
+    "react-app-rewired": "^1.6.2",
+    "redux-logger": "^3.0.6"
   }
 }
