--- a/my-app/package.json
+++ b/my-app/package.json
@@ -116,6 +116,8 @@
   "devDependencies": {
     "@babel/plugin-transform-runtime": "^7.1.0",
     "babel-plugin-import": "^1.10.0",
+    "less": "^3.8.1",
+    "less-loader": "^4.1.0",
     "react-app-rewired": "^1.6.2",
     "redux-logger": "^3.0.6"
   }
