--- a/my-app/package.json
+++ b/my-app/package.json
@@ -119,6 +119,7 @@
     "less": "^3.8.1",
     "less-loader": "^4.1.0",
     "react-app-rewired": "^1.6.2",
+    "redux-devtools-extension": "^2.13.5",
     "redux-logger": "^3.0.6"
   },
   "homepage": "."
