--- a/my-app/package.json
+++ b/my-app/package.json
@@ -6,6 +6,7 @@
     "@babel/core": "7.1.0",
     "@babel/runtime": "^7.1.2",
     "@svgr/webpack": "2.4.1",
+    "ajv": "^6.0.0",
     "antd-mobile": "^2.2.5",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "9.0.0",
