--- a/my-app/package.json
+++ b/my-app/package.json
@@ -50,6 +50,7 @@
     "react-app-polyfill": "^0.1.3",
     "react-dev-utils": "^6.0.5",
     "react-dom": "^16.6.0",
+    "react-lazyload": "^2.3.0",
     "react-redux": "^5.0.7",
     "react-scripts": "^1.0.14",
     "react-sticky": "^6.0.3",
