--- a/my-app/package.json
+++ b/my-app/package.json
@@ -54,6 +54,7 @@
     "react-redux": "^5.0.7",
     "react-scripts": "^1.0.14",
     "react-sticky": "^6.0.3",
+    "react-transition-group": "^2.5.0",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "resolve": "1.8.1",
