--- a/my-app/package.json
+++ b/my-app/package.json
@@ -133,6 +133,8 @@
     "react-router-dom": "^4.3.1",
     "redux-devtools-extension": "^2.13.5",
     "redux-devtools-log-monitor": "^1.4.0",
-    "redux-logger": "^3.0.6"
+    "redux-logger": "^3.0.6",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.2"
   }
 }
