--- a/my-app/package.json
+++ b/my-app/package.json
@@ -129,6 +129,7 @@
     "babel-plugin-import": "^1.10.0",
     "less": "^3.8.1",
     "less-loader": "^4.1.0",
+    "node-sass": "^4.11.0",
     "react-app-rewired": "^1.6.2",
     "react-router-dom": "^4.3.1",
     "redux-devtools-extension": "^2.13.5",
